# python-c-library

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml  test.py
.devcontainer/: devcontainer.json
src/: bindings.cpp  example.cpp  main.c
src/example/: example.cpp  example.hpp
src/lib/example/: example.c  example.h
