[build-system]
requires = [
  "scikit-build-core>=0.9",
  "pybind11>=2.10",
]
build-backend = "scikit_build_core.build"

[project]
name = "python_c_library"
version = "0.0.1"
description = "Minimal pybind11 + scikit-build-core example"
requires-python = ">=3.8"

[tool.scikit-build.cmake.define]
CMAKE_CXX_COMPILER = "g++"